// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pik theme Button base 1`] = `
Object {
  "Button": Object {
    "bg": "transparent",
    "bgActive": "gray8",
    "bgDisabled": "transparent",
    "bgHover": "gray4",
    "borderColor": "gray16",
    "borderRadius": 4,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "focus": "blue100",
    "minHeight": "m",
    "pb": 8,
    "pl": 24,
    "pr": 24,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "s",
  },
  "IconBefore": Object {
    "size": "s",
  },
  "Spinner": Object {
    "size": "m",
    "variant": "primary",
  },
  "Text": Object {
    "crop": true,
    "lineHeight": 1.1875,
    "ml": -1,
    "size": "m",
    "valignSelf": "middle",
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="default" checked loading 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="default" checked loading=false 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="default" checked=false loading 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="default" checked=false loading=false 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray12",
    "bgDisabled": "gray8",
    "bgHover": "gray8",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray12",
    "bgDisabled": "gray8",
    "bgHover": "gray8",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray12",
    "bgDisabled": "gray8",
    "bgHover": "gray8",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray12",
    "bgDisabled": "gray8",
    "bgHover": "gray8",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="l" multiline 1`] = `
Object {
  "Button": Object {
    "height": 64,
    "minHeight": "l",
    "minWidth": 290,
    "pb": 12,
    "pl": 48,
    "pr": 48,
    "pt": 12,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="m" multiline 1`] = `
Object {
  "Button": Object {
    "pb": 9,
    "pt": 9,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="s" multiline 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 9,
    "pt": 9,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="l" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 36,
    "pr": 36,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`pik theme Button fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Button fuzz: size="m" children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "mr": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconAfter={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "mr": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "ml": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`pik theme Button fuzz: size="s" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "mr": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "mr": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
    "mr": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 5,
    "pt": 5,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
    "mr": 4,
    "size": "s",
  },
}
`;

exports[`pik theme Button snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "default",
    "pressedOffset": 0,
    "size": "m",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Array [
      Object {
        "borderColor": "transparent",
        "borderRadius": 5,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "minHeight": [Function],
        "pb": [Function],
        "pl": 16,
        "pr": 16,
        "pt": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pl": 12,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pr": 12,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": 9,
            "pt": 9,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "overlay": "rgba(255,255,255,0.5)",
          },
        ],
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "pb": 11,
            "pl": 18,
            "pr": 18,
            "pt": 11,
          },
        ],
        "m": Array [
          Object {
            "pb": 8,
            "pl": 16,
            "pr": 16,
            "pt": 8,
          },
        ],
        "s": Array [
          Object {
            "pb": 5,
            "pl": 12,
            "pr": 12,
            "pt": 5,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": [Function],
            "pt": [Function],
          },
        ],
      },
      Object {
        "$switch": "preset",
        "default": Array [
          Object {
            "bg": "transparent",
            "bgActive": "gray12",
            "bgDisabled": "transparent",
            "bgHover": "gray4",
            "borderColor": "gray20",
            "color": "black",
            "focus": "blue100",
          },
        ],
        "error": Array [
          Object {
            "bg": "red500",
            "bgActive": "red700",
            "bgDisabled": "red500",
            "bgHover": "red600",
            "color": "white",
            "focus": "red100",
          },
        ],
        "newDefault": Array [
          Object {
            "bg": "gray8",
            "bgActive": "gray20",
            "bgDisabled": "gray8",
            "bgHover": "gray12",
            "color": "black",
            "focus": "blue100",
          },
        ],
        "primary": Array [
          Object {
            "bg": "blue500",
            "bgActive": "blue700",
            "bgDisabled": "blue500",
            "bgHover": "blue600",
            "color": "white",
            "focus": "blue100",
          },
        ],
        "success": Array [
          Object {
            "bg": "green500",
            "bgActive": "green700",
            "bgDisabled": "green500",
            "bgHover": "green600",
            "color": "white",
            "focus": "green100",
          },
        ],
        "warning": Array [
          Object {
            "bg": "orange500",
            "bgActive": "orange700",
            "bgDisabled": "orange500",
            "bgHover": "orange600",
            "color": "black",
            "focus": "orange100",
          },
        ],
      },
      Object {
        "borderRadius": 4,
        "pl": [Function],
        "pr": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "height": 64,
            "minWidth": 290,
            "pl": 48,
            "pr": 48,
          },
        ],
      },
      Object {
        "$switch": "preset",
        "default": Array [
          Object {
            "bgActive": "gray8",
            "bgHover": "gray4",
            "borderColor": "gray16",
          },
        ],
        "newDefault": Array [
          Object {
            "bg": "gray4",
            "bgActive": "gray12",
            "bgHover": "gray8",
          },
        ],
        "warning": Array [
          Object {
            "color": "white",
          },
        ],
      },
    ],
    "IconAfter": Array [
      Object {
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "mr": -4,
          },
        ],
      },
    ],
    "IconBefore": Array [
      Object {
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "ml": -4,
          },
        ],
      },
    ],
    "Spinner": Array [
      Object {
        "size": [Function],
      },
      Object {
        "variant": undefined,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "variant": "primary",
          },
        ],
      },
    ],
    "Text": Array [
      Object {
        "crop": true,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "ml": 6,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "mr": 6,
          },
        ],
      },
      Object {
        "lineHeight": 1.1875,
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "left",
            "ml": [Function],
          },
          Object {
            "$if": [Function],
            "$then": Array [
              Object {
                "ml": 10,
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "left",
            "mr": [Function],
          },
          Object {
            "$if": [Function],
            "$then": Array [
              Object {
                "mr": 10,
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`pik theme Input base 1`] = `
Object {
  "IconAfter": Object {
    "color": "gray28",
    "ml": 10,
    "size": "m",
  },
  "IconBefore": Object {
    "color": "gray28",
    "mr": 10,
    "size": "s",
  },
  "Input": Object {
    "bg": "gray4",
    "bgDisabled": "gray4",
    "bgFocus": "white",
    "borderColor": "gray4",
    "borderColorFocus": "gray16",
    "borderColorHover": "gray16",
    "borderRadius": 4,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "colorDisabled": "gray64",
    "cursor": "text",
    "focus": false,
    "fontSize": "m",
    "height": "m",
    "pl": 16,
    "placeholderColor": "gray44",
    "pr": 16,
  },
  "InputField": Object {},
  "Postfix": Object {
    "ml": 4,
  },
  "Prefix": Object {
    "mr": 6,
  },
}
`;

exports[`pik theme Input fuzz: clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
  },
}
`;

exports[`pik theme Input fuzz: size="l" 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`pik theme Input fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconAfter={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconBefore={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="s" 1`] = `
Object {
  "IconAfter": Object {
    "ml": 7,
  },
  "IconBefore": Object {
    "mr": 7,
  },
  "Input": Object {
    "fontSize": "s",
    "height": "s",
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 7,
  },
  "IconBefore": Object {
    "mr": 7,
  },
  "Input": Object {
    "fontSize": "s",
    "height": "s",
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 7,
  },
  "IconBefore": Object {
    "mr": 7,
  },
  "Input": Object {
    "fontSize": "s",
    "height": "s",
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 7,
  },
  "IconBefore": Object {
    "mr": 7,
  },
  "Input": Object {
    "fontSize": "s",
    "height": "s",
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`pik theme Input fuzz: value="value" 1`] = `Object {}`;

exports[`pik theme Input fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
  },
}
`;

exports[`pik theme Input fuzz: variant="error" 1`] = `
Object {
  "Input": Object {
    "bg": "red50",
    "borderColor": "red50",
    "borderColorFocus": "red300",
    "borderColorHover": "red300",
  },
}
`;

exports[`pik theme Input fuzz: variant="primary" 1`] = `Object {}`;

exports[`pik theme Input fuzz: variant="secondary" 1`] = `
Object {
  "Input": Object {
    "bg": "gray8",
    "borderColor": "gray8",
    "borderColorFocus": "gray20",
    "borderColorHover": "gray20",
  },
}
`;

exports[`pik theme Input fuzz: variant="success" 1`] = `
Object {
  "Input": Object {
    "bg": "green50",
    "borderColor": "green50",
    "borderColorFocus": "green300",
    "borderColorHover": "green300",
  },
}
`;

exports[`pik theme Input fuzz: variant="warning" 1`] = `
Object {
  "Input": Object {
    "bg": "orange50",
    "borderColor": "orange50",
    "borderColorFocus": "orange300",
    "borderColorHover": "orange300",
  },
}
`;

exports[`pik theme Input snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "kind": "outline",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Array [
      Object {
        "color": "gray28",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "area": 10,
            "component": #IconCross,
            "size": [Function],
          },
        ],
      },
      Object {
        "ml": [Function],
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCross,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCross,
          },
        ],
      },
    ],
    "IconBefore": Array [
      Object {
        "color": "gray28",
        "size": [Function],
      },
      Object {
        "mr": [Function],
      },
    ],
    "Input": Array [
      Object {
        "focus": true,
        "height": [Function],
      },
      Object {
        "bgDisabled": "gray4",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "fontSize": [Function],
        "pl": [Function],
        "placeholderColor": "gray40",
        "pr": [Function],
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
      Object {
        "bgFocus": "white",
        "borderRadius": 4,
        "borderWidth": 1,
        "focus": false,
        "pl": 16,
        "placeholderColor": "gray44",
        "pr": 16,
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "bg": "red50",
            "borderColor": "red50",
            "borderColorFocus": "red300",
            "borderColorHover": "red300",
          },
        ],
        "primary": Array [
          Object {
            "bg": "gray4",
            "borderColor": "gray4",
            "borderColorFocus": "gray16",
            "borderColorHover": "gray16",
          },
        ],
        "secondary": Array [
          Object {
            "bg": "gray8",
            "borderColor": "gray8",
            "borderColorFocus": "gray20",
            "borderColorHover": "gray20",
          },
        ],
        "success": Array [
          Object {
            "bg": "green50",
            "borderColor": "green50",
            "borderColorFocus": "green300",
            "borderColorHover": "green300",
          },
        ],
        "warning": Array [
          Object {
            "bg": "orange50",
            "borderColor": "orange50",
            "borderColorFocus": "orange300",
            "borderColorHover": "orange300",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bg": "white",
            "bgDisabled": "white",
            "borderColor": "white",
          },
        ],
      },
    ],
    "InputField": Array [],
    "Postfix": Array [
      Object {
        "ml": 4,
      },
    ],
    "Prefix": Array [
      Object {
        "mr": [Function],
      },
    ],
  },
}
`;

exports[`pik theme Select base 1`] = `
Object {
  "Input": Object {
    "pointerEvents": false,
    "pr": 11,
  },
}
`;

exports[`pik theme Select fuzz: size="l" 1`] = `Object {}`;

exports[`pik theme Select fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Select fuzz: size="s" 1`] = `Object {}`;

exports[`pik theme Select snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Input": Array [
      Object {
        "pointerEvents": false,
      },
      Object {
        "pr": 11,
      },
    ],
  },
}
`;

exports[`pik theme Text base 1`] = `
Object {
  "Text": Object {
    "color": undefined,
    "fontSize": undefined,
    "lineHeight": undefined,
  },
}
`;

exports[`pik theme Text fuzz: dense 1`] = `Object {}`;

exports[`pik theme Text fuzz: preset="heading" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
    "lineHeight": 1.4,
  },
}
`;

exports[`pik theme Text fuzz: preset="heading-large" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xl",
    "lineHeight": 1.34,
  },
}
`;

exports[`pik theme Text fuzz: preset="heading-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
    "lineHeight": 1.5,
  },
}
`;

exports[`pik theme Text fuzz: preset="title" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxxl",
    "lineHeight": 1.2,
  },
}
`;

exports[`pik theme Text fuzz: preset="title-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxl",
    "lineHeight": 1.25,
  },
}
`;

exports[`pik theme Text fuzz: size="l" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
    "lineHeight": 1.4,
  },
}
`;

exports[`pik theme Text fuzz: size="m" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
    "lineHeight": 1.5,
  },
}
`;

exports[`pik theme Text fuzz: size="s" 1`] = `
Object {
  "Text": Object {
    "fontSize": "s",
    "lineHeight": 1.43,
  },
}
`;

exports[`pik theme Text fuzz: variant="error" 1`] = `
Object {
  "Text": Object {
    "color": "red500",
  },
}
`;

exports[`pik theme Text fuzz: variant="primary" 1`] = `
Object {
  "Text": Object {
    "color": "blue500",
  },
}
`;

exports[`pik theme Text fuzz: variant="secondary" 1`] = `
Object {
  "Text": Object {
    "color": "gray52",
  },
}
`;

exports[`pik theme Text fuzz: variant="success" 1`] = `
Object {
  "Text": Object {
    "color": "green500",
  },
}
`;

exports[`pik theme Text fuzz: variant="warning" 1`] = `
Object {
  "Text": Object {
    "color": "yellow500",
  },
}
`;

exports[`pik theme Text snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Array [
      Object {
        "color": [Function],
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "lineHeight": "dense",
          },
        ],
      },
      Object {
        "lineHeight": [Function],
      },
    ],
  },
}
`;

exports[`pik theme Textarea base 1`] = `
Object {
  "IconClear": Object {
    "area": 10,
    "color": "gray28",
    "component": #IconCross,
    "size": "m",
    "visible": false,
  },
  "Textarea": Object {
    "bg": "gray4",
    "bgDisabled": "gray4",
    "bgFocus": "white",
    "borderColor": "gray4",
    "borderColorFocus": "gray16",
    "borderColorHover": "gray16",
    "borderRadius": 4,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "colorDisabled": "gray64",
    "cursor": "text",
    "focus": false,
    "fontSize": "m",
    "lineHeight": "normal",
    "minHeight": "m",
    "pb": 6,
    "pl": 16,
    "placeholderColor": "gray44",
    "pr": 16,
    "pt": 6,
  },
}
`;

exports[`pik theme Textarea fuzz: clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`pik theme Textarea fuzz: size="l" 1`] = `
Object {
  "IconClear": Object {
    "size": "l",
  },
  "Textarea": Object {
    "fontSize": "l",
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
}
`;

exports[`pik theme Textarea fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: size="s" 1`] = `
Object {
  "IconClear": Object {
    "size": "s",
  },
  "Textarea": Object {
    "fontSize": "s",
    "minHeight": "s",
    "pb": 7,
    "pt": 7,
  },
}
`;

exports[`pik theme Textarea fuzz: value="value" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`pik theme Textarea fuzz: variant="error" 1`] = `
Object {
  "Textarea": Object {
    "bg": "red50",
    "borderColor": "red50",
    "borderColorFocus": "red300",
    "borderColorHover": "red300",
  },
}
`;

exports[`pik theme Textarea fuzz: variant="primary" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: variant="secondary" 1`] = `
Object {
  "Textarea": Object {
    "bg": "gray8",
    "borderColor": "gray8",
    "borderColorFocus": "gray20",
    "borderColorHover": "gray20",
  },
}
`;

exports[`pik theme Textarea fuzz: variant="success" 1`] = `
Object {
  "Textarea": Object {
    "bg": "green50",
    "borderColor": "green50",
    "borderColorFocus": "green300",
    "borderColorHover": "green300",
  },
}
`;

exports[`pik theme Textarea fuzz: variant="warning" 1`] = `
Object {
  "Textarea": Object {
    "bg": "orange50",
    "borderColor": "orange50",
    "borderColorFocus": "orange300",
    "borderColorHover": "orange300",
  },
}
`;

exports[`pik theme Textarea snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconClear": Array [
      Object {
        "area": 10,
        "color": "gray28",
        "component": #IconCross,
        "size": [Function],
        "visible": [Function],
      },
      Object {
        "component": #IconCross,
      },
      Object {
        "component": #IconCross,
      },
    ],
    "Textarea": Array [
      Object {
        "focus": true,
        "lineHeight": "normal",
        "minHeight": [Function],
      },
      Object {
        "bgDisabled": "gray4",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "fontSize": [Function],
        "placeholderColor": "gray40",
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "pb": 8,
            "pl": 12,
            "pr": 12,
            "pt": 8,
          },
        ],
        "m": Array [
          Object {
            "pb": 6,
            "pl": 10,
            "pr": 10,
            "pt": 6,
          },
        ],
        "s": Array [
          Object {
            "pb": 7,
            "pl": 4,
            "pr": 4,
            "pt": 7,
          },
        ],
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
      Object {
        "bgFocus": "white",
        "borderRadius": 4,
        "borderWidth": 1,
        "focus": false,
        "pl": 16,
        "placeholderColor": "gray44",
        "pr": 16,
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "bg": "red50",
            "borderColor": "red50",
            "borderColorFocus": "red300",
            "borderColorHover": "red300",
          },
        ],
        "primary": Array [
          Object {
            "bg": "gray4",
            "borderColor": "gray4",
            "borderColorFocus": "gray16",
            "borderColorHover": "gray16",
          },
        ],
        "secondary": Array [
          Object {
            "bg": "gray8",
            "borderColor": "gray8",
            "borderColorFocus": "gray20",
            "borderColorHover": "gray20",
          },
        ],
        "success": Array [
          Object {
            "bg": "green50",
            "borderColor": "green50",
            "borderColorFocus": "green300",
            "borderColorHover": "green300",
          },
        ],
        "warning": Array [
          Object {
            "bg": "orange50",
            "borderColor": "orange50",
            "borderColorFocus": "orange300",
            "borderColorHover": "orange300",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bg": "white",
            "bgDisabled": "white",
            "borderColor": "white",
          },
        ],
      },
    ],
  },
}
`;
